<resources>
    <string name="app_name">Heo giu tien</string>
    <string name="action_settings">Cài đặt</string>

    <string name="expense">Chi tiêu</string>
    <string name="resource">Nguồn tiền</string>
    <string name="detail_expense">Chi tiết chi tiêu</string>
    <string name="create_expense">Thêm chi tiêu</string>
    <string name="current_balance">Số dư hiện tại.</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_alert">Alert!!</string>
    <string name="add">Thêm</string>
    <string name="save">Lưu</string>

    <!--create expense-->
    <string name="expense_related_person_hint">Tên người liên quan</string>
    <string name="expense_note_hint">Ghi chú cho chi tiêu này</string>
    <string name="discard_warning">Bạn có chắc là muốn hủy những thay đổi không?</string>
    <string name="transfer_tag">[Chuyển tiền] </string>
    <string name="deposit_tag">[Nộp tiền] </string>
    <string name="payback_tag">[Trả nợ] </string>
    <string name="lend">Cho mượn</string>
    <string name="borrow">Mượn</string>

    <!--expense detail-->
    <string name="expense_purpose">Mục đích : </string>
    <string name="expense_amount">Số tiền : </string>
    <string name="expense_resource">Nguồn tiền : </string>
    <string name="expense_transfer">Chuyển tiền : </string>
    <string name="expense_borrow_lend">Mượn/Cho mượn : </string>

    <!--list expense-->
    <string name="expense_current_day">%s (%d/%d)</string>
    <string name="expense_week_of_year">Tuần %d (%s)</string>

    <!--list resource-->
    <string name="item_current_balance">Hiện tại: %s</string>
    <string name="item_open_balance">Đầu kì: %s</string>
    <string name="item_close_balance">Cuối kì: %s</string>

    <!--create resource-->
    <string name="default_cash">Tiền mặt</string>
    <string name="default_cash_des">Chi tiêu tiền mặt</string>
    <string name="default_cash_short">CASH</string>
    <string name="create_resource">Thêm nguồn tiền</string>
    <string name="create_resource_name">Tên nguồn tiền</string>
    <string name="create_resource_description">Mô tả về nguồn tiền</string>
    <string name="create_resource_open_balance">Số dư đầu kì</string>
    <string name="create_resource_short_name">Tên vắn tắt của nguồn tiền</string>
    <string name="create_resource_currency">Loại tiền tệ</string>
    <string name="create_resource_currency_unit">Đơn vị tiền tệ</string>

</resources>
