<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.funworld.heogiutien.features.resource.create.CreateResourceActivity">

    <TextView
        android:id="@+id/tv_title_text"
        style="@style/text_bold_big_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/create_resource" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_title_text"
        android:layout_alignTop="@+id/tv_title_text"
        android:padding="@dimen/gap_small"
        android:src="@drawable/ic_close_white_24dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_resource_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title_text"
        android:layout_marginLeft="@dimen/gap_small"
        android:layout_marginRight="@dimen/gap_small"
        android:layout_marginTop="@dimen/gap_small">

        <EditText
            android:id="@+id/et_resource_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/create_resource_name"
            android:textAllCaps="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_resource_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_resource_name"
        android:layout_marginLeft="@dimen/gap_small"
        android:layout_marginRight="@dimen/gap_small"
        android:layout_marginTop="@dimen/gap_small">

        <EditText
            android:id="@+id/et_resource_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/create_resource_description"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_resource_open_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_resource_description"
        android:layout_marginLeft="@dimen/gap_small"
        android:layout_marginRight="@dimen/gap_small"
        android:layout_marginTop="@dimen/gap_small">

        <EditText
            android:id="@+id/et_resource_open_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/create_resource_open_balance"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_resource_short_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_resource_open_balance"
        android:layout_marginLeft="@dimen/gap_small"
        android:layout_marginRight="@dimen/gap_small"
        android:layout_marginTop="@dimen/gap_small">

        <EditText
            android:id="@+id/et_resource_short_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/create_resource_short_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_resource_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_resource_short_name"
        android:layout_marginLeft="@dimen/gap_small"
        android:layout_marginRight="@dimen/gap_small"
        android:layout_marginTop="@dimen/gap_small">

        <EditText
            android:id="@+id/et_resource_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/create_resource_currency" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_resource_currency_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/til_resource_currency"
        android:layout_marginLeft="@dimen/gap_small"
        android:layout_marginRight="@dimen/gap_small"
        android:layout_toRightOf="@+id/til_resource_currency">

        <EditText
            android:id="@+id/et_resource_currency_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="6"
            android:hint="@string/create_resource_currency_unit" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_create_resource_add"
        style="@style/text_bold_large_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/gap_normal"
        android:text="@string/add" />


</RelativeLayout>
