<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/top_bar"
        layout="@layout/layout_top_bar" />

    <TextView
        android:id="@+id/tv_expense_time"
        style="@style/text_bold_italic_large_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_margin="@dimen/gap_small"
        android:background="@drawable/selector_primary_round_button"
        android:enabled="false"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/gap_normal"
        android:text="Thứ 3, 28-10-2017 18:30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/gap_small"
        android:layout_marginRight="@dimen/gap_small"
        android:background="@drawable/background_bottom_border"
        android:orientation="horizontal"
        android:padding="@dimen/gap_small"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/expense_purpose"
            android:textSize="@dimen/text_size_big" />

        <EditText
            android:id="@+id/et_expense_detail_purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="An sang"
            android:textSize="@dimen/text_size_big" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/gap_small"
        android:layout_marginRight="@dimen/gap_small"
        android:background="@drawable/background_bottom_border"
        android:orientation="horizontal"
        android:padding="@dimen/gap_small"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/expense_amount"
            android:textSize="@dimen/text_size_big" />

        <EditText
            android:id="@+id/et_expense_detail_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="an sang"
            android:textSize="@dimen/text_size_big" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/gap_small"
        android:layout_marginRight="@dimen/gap_small"
        android:background="@drawable/background_bottom_border"
        android:orientation="horizontal"
        android:padding="@dimen/gap_normal"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/expense_resource"
            android:textSize="@dimen/text_size_big" />

        <TextView
            android:id="@+id/tv_expense_detail_resource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_arrow_drop_down_black"
            android:text="@string/default_cash"
            android:textSize="@dimen/text_size_big" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/gap_small"
        android:layout_marginRight="@dimen/gap_small"
        android:background="@drawable/background_bottom_border"
        android:orientation="horizontal"
        android:padding="@dimen/gap_normal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/expense_transfer"
            android:textSize="@dimen/text_size_big" />

        <TextView
            android:id="@+id/tv_expense_detail_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/gap_small"
            android:drawableRight="@drawable/ic_arrow_forward_black"
            android:text="BIDV"
            android:textSize="@dimen/text_size_big" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/gap_small"
            android:layout_weight="2"
            android:text="CASH" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/gap_small"
        android:layout_marginTop="@dimen/gap_small"
        android:text="@string/expense_borrow_lend"
        android:textSize="@dimen/text_size_big" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_borrow_lend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/gap_small" />
</LinearLayout>